# camlished

./: .gitignore  .merlin  Install.txt  Makefile  authors.mli  dune-project  gameData.ml  gameState.ml  gameState.mli  input.ml  input.mli  main.ml  main.mli  mapGenerator.ml  mapGenerator.mli  names.ml  names.mli  perlin.ml  perlin.mli  readme  readme.md  renderer.ml  renderer.mli  stateTest.ml
data/: camlishedGameData.json  sampleGameData.json
src/: .merlin  authors.ml  buildings.ml  buildings.mli  dune  gameData.ml  gameData.mli  gameState.ml  gameState.mli  gamestate.ml  gamestate.mli  input.ml  input.mli  main.ml  mapGenerator.ml  names.ml  names.mli  perlin.ml  renderer.ml  renderer.mli  resources.mli  sampleGameData.json  sampleSavedState.json  stateTest.ml
