(executable
  (name main)
  (public_name main)
  (package camlished)
  (modules main)
  (libraries lib))


(executable
 (name stateTest)
 (public_name stateTest)
 (modules stateTest)
 (libraries lib))

(library
  (name lib)
  (public_name camlished.lib)
  (modules gameData gameState mapGenerator perlin renderer Input names)
  (libraries ANSITerminal str yojson oUnit)
)


(env
  (dev
    (flags (:standard -warn-error -A))))